# bardos

./: .gitignore  .gitmodules  Dockerfile  README.md  build.js  docker-compose.yml  package-lock.json  package.json
backend/: CHANGELOG.md  bardosBackend.cabal  hie.yaml
backend/lib/: Api.hs  Config.hs  DevCert.hs  Images.hs  Pages.hs
backend/pages/: Home.md
backend/pages/About/: About.md  Address.md
backend/pages/Demo/: Demo.md  Images.md
backend/pages/Demo/Code/: C#.md  C.md  Code.md  Haskell.md  Java.md  JavaScript.md  Plain.md  Python.md  Rust.md
backend/src/: Main.hs
src/: index.html  index.js  style.css
src/components/: highlight.js  markdown.js  site.js
