cabal-version:      3.8
name:               bardosBackend
version:            0.1.0.0
license:            GPL-3.0-or-later
author:             ExtraTNT
maintainer:         sven.hugi@swisstxt.ch
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Config
                    , Api
                    , DevCert
                    , Pages
                    , Images
    build-depends:    transformers ^>=0.6.1.0
                    , base             >= 4.18 && < 4.23
                    , warp              >= 3.3
                    , warp-tls          >= 3.3
                    , wai               >= 3.2
                    , wai-app-static    >= 3.1
                    , http-types        >= 0.12
                    , optparse-applicative >= 0.17
                    , aeson             >= 2.1
                    , bytestring        >= 0.11
                    , text              >= 2.0
                    , filepath          >= 1.4
                    , directory         >= 1.3
                    , process           >= 1.6
    hs-source-dirs:   lib
    default-language: GHC2021

executable bardosBackend
    import:           warnings
    main-is:          Main.hs
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base >= 4.18 && < 4.23,
        bardosBackend,
        warp,
        warp-tls,
        wai,
        wai-app-static,
        bytestring
    hs-source-dirs:   src
    default-language: GHC2021
